remove the header bg

--- a/styles/external.css
+++ b/styles/external.css
@@ -24,7 +24,7 @@ h3{color: rgb(255, 166, 0);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .header{ 
-    background-image:url('../peter-herrmann-FBlQN_UHQzc-unsplash.jpg');
+    /* background-image:url('../peter-herrmann-FBlQN_UHQzc-unsplash.jpg'); */
     /* background-repeat: no-repeat; */
     /* background-repeat: repeat-x; */
     /* background-repeat: repeat-y; */
